[package]
name = "cos-benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
aws-sdk-s3 = "1.54"
aws-config = "1.5"
aws-credential-types = "1.2"
aws-types = "1.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
clap = { version = "4.5.46", features = ["derive"] }
uuid = { version = "1.18.0", features = ["v4"] }
chrono = { version = "0.4.41", features = ["serde"] }
rayon = "1.11.0"
rand = "0.8.5"
sysinfo = "0.37.0"
gethostname = "1.0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"